log
Fri, Apr 18, 2025  8:33:50 PM: 
 tests:  0|6
total_score: 0/70
eeef3b7
Sun, Apr 20, 2025  2:54:44 PM: 
 hashmap.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  0|0
6816a54
Sun, Apr 20, 2025  2:55:20 PM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
26af63c
Sun, Apr 20, 2025  2:56:32 PM: 
 tests:  0|0
088516b
Sun, Apr 20, 2025  2:58:07 PM: 
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'createMap':
hashmap.c:58:5: error: 'mpa' undeclared (first use in this function)
     mpa->size = 0;
     ^~~
hashmap.c:58:5: note: each undeclared identifier is reported only once for each function it appears in
f86d054
Sun, Apr 20, 2025  2:58:38 PM: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
a78790c
Sun, Apr 20, 2025  3:11:40 PM: 
 hashmap.c | 20 ++++++++++++++++++++
 1 file changed, 20 insertions(+)
 tests:  5|4
total_score: 30/70
5a041d5
Sun, Apr 20, 2025  3:15:46 PM: 
 hashmap.c | 17 ++++++++++++++++-
 1 file changed, 16 insertions(+), 1 deletion(-)
 tests:  8|3
total_score: 40/70
40d91e6
Sun, Apr 20, 2025  3:21:10 PM: 
 hashmap.c | 7 +++++++
 1 file changed, 7 insertions(+)
 tests:  11|2
total_score: 50/70
03ed2d0
Sun, Apr 20, 2025  3:30:48 PM: 
 hashmap.c | 11 +++++++++++
 1 file changed, 11 insertions(+)
 tests:  13|2
total_score: 50/70
e7036c5
Sun, Apr 20, 2025  3:34:58 PM: 
 hashmap.c | 11 ++++++++---
 1 file changed, 8 insertions(+), 3 deletions(-)
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'nextMap':
hashmap.c:134:23: error: 'HashMap {aka struct HashMap}' has no member named 'bucktets'; did you mean 'buckets'?
             return map->bucktets[i];
                       ^~
68b242a
Sun, Apr 20, 2025  3:35:16 PM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  14|2
total_score: 50/70
82d896d
Sun, Apr 20, 2025  3:36:37 PM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'nextMap':
hashmap.c:129:37: error: lvalue required as left operand of assignment
     if (map == NULL || map->current = 0) return NULL;
                                     ^
bd955af
Sun, Apr 20, 2025  3:36:59 PM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  13|2
total_score: 50/70
8f985fe
Sun, Apr 20, 2025  3:37:39 PM: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  14|2
total_score: 50/70
a85548e
Sun, Apr 20, 2025  3:41:43 PM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  16|1
total_score: 60/70
d631b13
Sun, Apr 20, 2025  3:53:44 PM: 
 hashmap.c | 13 +++++++++++++
 1 file changed, 13 insertions(+)
 tests:  17|0
total_score: 70/70
72d7b10
